tests/NormalTests/paczka2/big_fuzzy/43063977.err
Error in line 1: fEXan A325 37,9
Error in line 3: 3dyovdbFgDk S116 2,7
Error in line 8: F15MVNPzl S151 1,1
Error in line 9: A289 A325 68,4
Error in line 12: fEXan S151 70,6
Error in line 10: F15MVNPzl S116 96,5
Error in line 17: b77R9oy A325 5,97
Error in line 24: F15MVNPzl A289 23,9
Error in line 26: b77R9oy A325 13,1
Error in line 29: b77R9oy A289 2,7
Error in line 62: F15MVNPzl A2G9 9G,5
Error in line 56: b77R9oy A325 246,5
Error in line 49: A289 A289 83,6
Error in line 65: A289 S116 84,8
Error in line 74: A289 A325 3,7
Error in line 80: b77R9oy A289 53,6
Error in line 94: b77R9oy S116 75,7
Error in line 96: b77R9oy A325 16,0
Error in line 104: ETcczxr A325 69,2
Error in line 113: fEXan A289 15,7
Error in line 90: A289 A289 278,7
Error in line 118: ETcczxr S151 28,7
Error in line 131: F15MVNPzl S116 42,1
Error in line 120: fEXan S116 54,8
Error in line 129: b77R9oy A289 92,7
Error in line 132: F15MVNPzl S151 19,4
Error in line 140: F15MVNPzl A289 62,0
Error in line 145: U1IkFwq S116 10,4
Error in line 148: A289 A289 78,1
Error in line 134: fEXan A289 28,2
Error in line 156: b77R9oy S116 91,5
Error in line 160: U1IkFwq S151 9*,6
Error in line 161: 3dyovdbFgDk A325 28,70
Error in line 165: U1IkFwq S151 121,4
Error in line 164: ETcczxr A289 38,7
Error in line 167: 3dyovdbFgDk A325 44,3
Error in line 180: U1IkFwq A325 62,8
Error in line 207: A289 A289 74,6
Error in line 212: F15MVNPzl S116 96,5
Error in line 216: F15MVNPzl S151 41,9
Error in line 205: U1IkFwq A325 334,6
Error in line 238: A289 A325 291,4
Error in line 233: b77R9oy A289 69,2
